<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/utilizationLinerLayout"
        android:layout_width="fill_parent"
        android:layout_height="320dip"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ContextLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="320dip"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/setReserveButton"
                android:layout_gravity="left"
                android:text="@string/setReserveText" />

            <Button
                android:id="@+id/cancelReserveButton"
                android:layout_gravity="right"
                android:text="@string/cancelReserveText" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_gravity="left"
                android:text="@string/pidText" />

            <EditText
                android:id="@+id/pid"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_gravity="left"
                android:text="@string/prioText" />

            <EditText
                android:id="@+id/prio"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_gravity="left"
                android:text="@string/cSecText" />

            <EditText
                android:id="@+id/cSec"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView4"
                android:layout_gravity="left"
                android:text="@string/cNsText" />

            <EditText
                android:id="@+id/cNs"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_gravity="left"
                android:text="@string/tSecText" />

            <EditText
                android:id="@+id/tSec"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView6"
                android:layout_gravity="left"
                android:text="@string/tNsText" />

            <EditText
                android:id="@+id/tNs"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />
        </GridLayout>
    </LinearLayout>

</LinearLayout>